accessible/html/HTMLFormControlAccessible.cpp
@@ -14,6 +14,7 @@
 #include "Relation.h"
 #include "mozilla/a11y/Role.h"
 #include "States.h"
+#include "TextLeafAccessible.h"
 
 #include "nsContentList.h"
 #include "mozilla/dom/HTMLInputElement.h"
@@ -172,22 +173,6 @@ bool HTMLButtonAccessible::HasPrimaryAction() const { return true; }
 
 void HTMLButtonAccessible::ActionNameAt(uint8_t aIndex, nsAString& aName) {
   if (aIndex == eAction_Click) aName.AssignLiteral("press");
-}
-
-uint64_t HTMLButtonAccessible::State() {
-  uint64_t state = HyperTextAccessible::State();
-  if (state == states::DEFUNCT) return state;
-
-  // Inherit states from input@type="file" suitable for the button. Note,
-  // no special processing for unavailable state since inheritance is supplied
-  // other code paths.
-  if (mParent && mParent->IsHTMLFileInput()) {
-    uint64_t parentState = mParent->State();
-    state |= parentState & (states::BUSY | states::REQUIRED | states::HASPOPUP |
-                            states::INVALID);
-  }
-
-  return state;
 }
 
 uint64_t HTMLButtonAccessible::NativeState() const {
@@ -467,54 +452,61 @@ HTMLFileInputAccessible::HTMLFileInputAccessible(nsIContent* aContent,
                                                  DocAccessible* aDoc)
     : HyperTextAccessible(aContent, aDoc) {
   mType = eHTMLFileInputType;
+  mGenericTypes |= eButton;
 }
 
-role HTMLFileInputAccessible::NativeRole() const {
-  // No specific role in AT APIs. We use GROUPING so that the label will be
-  // reported by screen readers when focus enters this control .
-  return roles::GROUPING;
+role HTMLFileInputAccessible::NativeRole() const { return roles::PUSHBUTTON; }
+
+bool HTMLFileInputAccessible::IsAcceptableChild(nsIContent* aEl) const {
+  // File inputs are rendered using native anonymous children. However, we
+  // want to expose this as a button Accessible so that clients can pick up the
+  // name and description from the button they activate, rather than a
+  // container. We still expose the text leaf descendants so we can get the
+  // name of the Browse button and the file name.
+  return aEl->IsText();
 }
 
-nsresult HTMLFileInputAccessible::HandleAccEvent(AccEvent* aEvent) {
-  nsresult rv = HyperTextAccessible::HandleAccEvent(aEvent);
-  NS_ENSURE_SUCCESS(rv, rv);
-
-  // Redirect state change events for inherited states to child controls. Note,
-  // unavailable state is not redirected. That's a standard for unavailable
-  // state handling.
-  AccStateChangeEvent* event = downcast_accEvent(aEvent);
-  if (event && (event->GetState() == states::BUSY ||
-                event->GetState() == states::REQUIRED ||
-                event->GetState() == states::HASPOPUP ||
-                event->GetState() == states::INVALID)) {
-    LocalAccessible* button = LocalChildAt(0);
-    if (button && button->Role() == roles::PUSHBUTTON) {
-      RefPtr<AccStateChangeEvent> childEvent = new AccStateChangeEvent(
-          button, event->GetState(), event->IsStateEnabled(),
-          event->FromUserInput());
-      nsEventShell::FireEvent(childEvent);
+ENameValueFlag HTMLFileInputAccessible::Name(nsString& aName) const {
+  ENameValueFlag flag = HyperTextAccessible::Name(aName);
+  if (flag == eNameFromSubtree) {
+    // The author didn't provide a name. We'll compute the name from our subtree
+    // below.
+    aName.Truncate();
+  } else {
+    // The author provided a name. We do use that, but we also append our
+    // subtree text so the user knows this is a file chooser button and what
+    // file has been chosen.
+    if (aName.IsEmpty()) {
+      // Name computation is recursing, perhaps due to a wrapping <label>. Don't
+      // append the subtree text. Return " " to prevent
+      // nsTextEquivUtils::AppendFromAccessible walking the subtree itself.
+      aName += ' ';
+      return flag;
     }
   }
-
-  return NS_OK;
+  // Unfortunately, GetNameFromSubtree doesn't separate the button text from the
+  // file name text. Compute the text ourselves.
+  uint32_t count = ChildCount();
+  for (uint32_t c = 0; c < count; ++c) {
+    TextLeafAccessible* leaf = LocalChildAt(c)->AsTextLeaf();
+    MOZ_ASSERT(leaf);
+    if (!aName.IsEmpty()) {
+      aName += ' ';
+    }
+    aName += leaf->Text();
+  }
+  return flag;
 }
 
-LocalAccessible* HTMLFileInputAccessible::CurrentItem() const {
-  // Allow aria-activedescendant to override.
-  if (LocalAccessible* item = HyperTextAccessible::CurrentItem()) {
-    return item;
-  }
+bool HTMLFileInputAccessible::HasPrimaryAction() const { return true; }
 
-  // The HTML file input itself gets DOM focus, not the button inside it.
-  // For a11y, we want the button to get focus.
-  LocalAccessible* button = LocalFirstChild();
-  if (!button) {
-    MOZ_ASSERT_UNREACHABLE("File input doesn't contain a button");
-    return nullptr;
+void HTMLFileInputAccessible::ActionNameAt(uint8_t aIndex, nsAString& aName) {
+  if (aIndex == 0) {
+    aName.AssignLiteral("press");
   }
-  MOZ_ASSERT(button->IsButton());
-  return button;
 }
+
+bool HTMLFileInputAccessible::IsWidget() const { return true; }
 
 ////////////////////////////////////////////////////////////////////////////////
 // HTMLSpinnerAccessible
